--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,56 @@
 [tool.poetry]
-name = "mlopdracht"
+name = "deep_learning"
 version = "0.1.0"
 description = ""
-authors = ["R.Grouls <rgrouls@gmail.com>"]
-readme = "README.md"
+authors = ["Raoul Grouls <rgrouls@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.8,<=3.11.1"
+loguru = "^0.6.0"
+pandas = "^1.4.0"
+matplotlib = "^3.5.1"
+seaborn = "^0.11.2"
+plotly = "^5.5.0"
+scikit-learn = "^1.0.2"
+pydantic = "^1.9.0"
+tqdm = "^4.64.1"
+torchvision = "*"
 torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp39-cp39-linux_x86_64.whl"}
-loguru = "^0.7.0"
-tqdm = "^4.65.0"
-numpy = "^1.24.3"
-requests = "^2.30.0"
-pydantic = "^1.10.7"
-jupyter = "^1.0.0"
+torchtext = "*"
+torch-tb-profiler = "^0.4.0"
+torchinfo = "^1.7.1"
+torchsummary = "^1.5.1"
+scipy = "^1.10.0"
+ray = "^2.4.0"
+numpy = "1.23.0"
+
+[tool.poetry.group.tuning.dependencies]
+gin-config = "^0.5.0"
+ray = {extras = ["tune"], version = "^2.1.0"}
+protobuf = "^3.20" # needed for ray
+bayesian-optimization = "^1.4.2"
+hpbandster = "^0.7.4"
+configspace = "^0.6.0"
+mlflow = "^2.1.1"
+
+[tool.poetry.group.extras.dependencies]
+shap = "^0.41.0"
+numba = "0.56.4"
+llvmlite = "^0.39.1"
+hyperopt = "^0.2.7"
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.3.0"
-isort = "^5.12.0"
-flake8 = "^6.0.0"
-pep8-naming = "^0.13.3"
-flake8-annotations = "^3.0.1"
-mypy = "^1.2.0"
+black = "^22.1.0"
+flake8 = "^4.0.1"
+isort = "^5.10.1"
+mypy = "^0.931"
+pytest = "^7.0.0"
+pep8-naming = "^0.12.1"
+flake8-annotations = "^2.7.0"
+jupyter = "^1.0.0"
+nbformat = "^5.3.0"
+importlib-resources = "^5.7.1"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
